[package]
name = "runner"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
walkdir = "2.4"
regex = "1.10"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
